[package]
name = "crusty-lb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0.0", features = ["full"] }
clap = {version = "4.0", features = ["env", "derive"] }
rand = "0.8.5"
parse_duration = "2.1.1"